# qec-rs

./: Cargo.toml
examples/codes/: 3_4_40_30_hgp.json
src/: lib.rs  main.rs
src/decoder/: mod.rs
src/env/: mod.rs
src/error_models/: mod.rs
src/libs/: mod.rs
src/logger/: mod.rs
src/qcodes/: mod.rs  sym_hgp.rs
src/qcodes/sym_hgp/: decoder.rs  error_model.rs  mod.rs
