[package]
name = "qec-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "QEC"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.2"
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
